Add new features: CSV export, quick edit quantity, profile photo upload, and backend API integration
- Add CSV export functionality for inventory
- Implement quick edit for item quantities
- Add profile photo upload/delete with Supabase Storage
- Display current profile details before edit form
- Integrate backend API for AI meal plan generation
- Integrate backend API for AI recipe suggestions
- Add quantity units (kg, g, L, mL, pcs)
- Update home page stats to be truthful
- Improve notification system with better error handling
- Add storage bucket configuration for profile photos

--- a/home.html
+++ b/home.html
@@ -46,16 +46,16 @@
                 </div>
                 <div class="hero-stats">
                     <div class="stat">
-                        <span class="stat-number">10K+</span>
-                        <span class="stat-label">Active Users</span>
+                        <span class="stat-number">Smart</span>
+                        <span class="stat-label">Tracking</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-number">50K+</span>
-                        <span class="stat-label">Recipes</span>
+                        <span class="stat-number">AI</span>
+                        <span class="stat-label">Powered</span>
                     </div>
                     <div class="stat">
-                        <span class="stat-number">30%</span>
-                        <span class="stat-label">Avg. Savings</span>
+                        <span class="stat-number">24/7</span>
+                        <span class="stat-label">Access</span>
                     </div>
                 </div>
             </div>
