--- a/inventory.html
+++ b/inventory.html
@@ -387,6 +387,9 @@
             <div class="items-header">
                 <h3>Your Inventory</h3>
                 <div style="display: flex; gap: var(--spacing-sm);">
+                    <a href="profile.html" class="btn btn-small" style="background: #8b5cf6; color: white; text-decoration: none;">
+                        📊 Analytics
+                    </a>
                     <button class="btn btn-small" style="background: #10b981; color: white;" onclick="exportToCSV()">
                         📥 Export CSV
                     </button>
