Fix budget initialization - each user gets their own default budget
- Added initializeDefaultBudget() function in main.js
- Automatically creates ₹5000 default budget for new users on first login
- Budget is user-specific (tied to user_id in budgets table)
- Each user can customize their budget in Settings page
- Budget initialization added to dashboard, inventory, profile, and settings pages
- Fixes issue where all users appeared to have same budget (was just fallback value)
- Now each user has their own budget record in database

--- a/dashboard.html
+++ b/dashboard.html
@@ -745,6 +745,7 @@
         }
 
         // Initialize
+        SmartCart.initializeDefaultBudget();
         loadQuickStats();
     </script>
 </body>
