--- a/profile.html
+++ b/profile.html
@@ -183,6 +183,7 @@
         // Load analytics on page load
         document.addEventListener('DOMContentLoaded', async () => {
             await SmartCart.requireAuth();
+            await SmartCart.initializeDefaultBudget();
             await loadAnalytics();
         });
 
